[project]
name = "sortedmultiset"
version = "0.0.1"
authors = [
  { name="Rushikesh Sunil Kotkar", email="rshksh019@gmail.com" },
]
description = "A sorted multiset which is similar to multiset of cpp so can developers access,delete,search elements in O(log n) time which can make job easy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"